@@ -2257,6 +2257,10 @@ int init_macrox_names(void){
 	add_macrox_name(MACRO_LASTSERVICEEVENTID,"LASTSERVICEEVENTID");
 	add_macrox_name(MACRO_HOSTGROUPNAMES,"HOSTGROUPNAMES");
 	add_macrox_name(MACRO_SERVICEGROUPNAMES,"SERVICEGROUPNAMES");
+	add_macrox_name(MACRO_HOSTACKAUTHORNAME,"HOSTACKAUTHORNAME");
+	add_macrox_name(MACRO_HOSTACKAUTHORALIAS,"HOSTACKAUTHORALIAS");
+	add_macrox_name(MACRO_SERVICEACKAUTHORNAME,"SERVICEACKAUTHORNAME");
+	add_macrox_name(MACRO_SERVICEACKAUTHORALIAS,"SERVICEACKAUTHORALIAS");
 
 #ifdef DEBUG0
 	printf("init_macrox_names() end\n");
